# fsharp-definitions

./: .gitignore  .rusty-hook.toml  Cargo.toml  Makefile  README.md  fsharp-definitions-organize.js  fsharp-generate-types.sh
.github/workflows/: ci.yml
example/: Cargo.toml  Makefile
example/src/: interface.rs  main.rs
fsharp-definitions-derive/: Cargo.toml  README.md
fsharp-definitions-derive/src/: attrs.rs  derive_enum.rs  derive_struct.rs  lib.rs  patch.rs  source_builder.rs  tests.rs  tots.rs
scripts/: readme.sh
scripts/templates/: after.html  before.html
src/: lib.rs
