[package]
name = "fsharp-test"
version = "0.1.0"
authors = ["Ian Castleden <ian.castleden@gmail.com>"]
edition = "2018"

[lib]
name = "mywasm"
path = "src/interface.rs"
crate-type = ["cdylib"]



[dependencies]

serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1"
# fsharp-definitions = { version="0.1",  path = ".." , features=["export-fsharp"] }
fsharp-definitions = { version="0.1",  path = ".." , features = [] }

# [dependencies.fsharp-definitions]
# version = "0.1"
# path = ".."
# features = ["export-fsharp"]


[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.37"

[workspace]
members = []
