[package]
name = "fsharp-definitions-derive"
version = "0.1.10"
description = "serde support for exporting FSharp definitions"
authors = ["Tim Ryan <id@timryan.org>", "Sam Rijs <srijs@airpost.net>" , "Ian Castleden <ian.castleden@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/arabidopsis/fsharp-definitions"
keywords =["fsharp", "serde"]
categories = ["data-structures", "development-tools", "wasm" , "web-programming"]
edition = "2018"


[lib]
proc-macro = true
path = "src/lib.rs"


[dependencies]
serde_derive_internals = "0.25.0"
syn = { version = "1.0.23", features = ["extra-traits"] }
proc-macro2 = "1.0.17"
regex = "1.3.7"
lazy_static = "1.4.0"
cfg-if = "0.1.10"

[dev-dependencies]
serde = { version = "1.0.87", features = ["derive"] }
insta = "0.6.2"

[features]
export-fsharp = []
test = []
